--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,14 @@ cachetools==5.3.1
 certifi==2023.7.22
 chardet==3.0.4
 charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
+customtkinter==5.2.0
+darkdetect==0.8.0
 deep-translator==1.11.4
 docopt==0.6.2
+EasyProcess==1.1
+entrypoint2==1.1
 ffmpeg==1.4
 ffmpeg-normalize==0.5.1
 frozenlist==1.4.0
@@ -27,6 +32,7 @@ googleapis-common-protos==1.60.0
 googletrans==3.0.0
 grpcio==1.58.0
 grpcio-status==1.58.0
+gTTS==2.3.2
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -38,16 +44,32 @@ idna==2.10
 langdetect==1.0.9
 lz4==4.3.2
 magic-filter==1.0.11
+MouseInfo==0.1.3
+mss==9.0.1
 multidict==6.0.4
+numpy==1.26.0
+openai==0.28.1
+Pillow==10.0.1
 proto-plus==1.22.3
 protobuf==4.24.3
+psutil==5.9.5
+pyaes==1.6.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+PyAutoGUI==0.9.54
 pycryptodomex==3.19.0
 pydantic==2.3.0
 pydantic_core==2.6.3
 pydub==0.25.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
 python-dotenv==1.0.0
+Python-IO==0.3
+pytweening==1.0.7
 requests==2.31.0
 rfc3986==1.5.0
 rsa==4.9
@@ -55,6 +77,8 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 SpeechRecognition==3.10.0
+Telethon==1.30.3
+tqdm==4.66.1
 typing_extensions==4.7.1
 urllib3==2.0.5
 yarl==1.9.2
