--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 aiofiles==23.1.0
 aiogram==3.1.1
 aiohttp==3.8.5
@@ -6,79 +7,89 @@ annotated-types==0.5.0
 anyio==4.0.0
 async-timeout==4.0.3
 attrs==23.1.0
-bardapi==0.1.34
+bardapi==0.1.38
 beautifulsoup4==4.12.2
 browser-cookie3==0.19.1
 cachetools==5.3.1
 certifi==2023.7.22
-chardet==3.0.4
+cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
-customtkinter==5.2.0
-darkdetect==0.8.0
+comtypes==1.2.0
+contourpy==1.1.1
+cycler==0.12.1
 deep-translator==1.11.4
-docopt==0.6.2
+distlib==0.3.7
 EasyProcess==1.1
 entrypoint2==1.1
 ffmpeg==1.4
-ffmpeg-normalize==0.5.1
+filelock==3.12.3
+flatbuffers==23.5.26
+fonttools==4.43.1
 frozenlist==1.4.0
 google-api-core==2.12.0
 google-auth==2.23.2
 google-cloud-core==2.3.3
 google-cloud-translate==3.12.0
 googleapis-common-protos==1.60.0
-googletrans==3.0.0
-grpcio==1.58.0
-grpcio-status==1.58.0
-gTTS==2.3.2
-h11==0.9.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2023.1.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
+grpcio==1.59.0
+grpcio-status==1.59.0
+gTTS==2.4.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.18.0
+httpx==0.25.0
+hyperframe==6.0.1
+idna==3.4
+keyboard==0.13.5
+kiwisolver==1.4.5
 langdetect==1.0.9
 lz4==4.3.2
 magic-filter==1.0.11
+matplotlib==3.8.0
+mediapipe==0.10.5
 MouseInfo==0.1.3
-mss==9.0.1
+mss==1.0.2
 multidict==6.0.4
 numpy==1.26.0
-openai==0.28.1
+opencv-contrib-python==4.8.1.78
+opencv-python==4.8.1.78
+packaging==23.2
 Pillow==10.0.1
+pipenv==2023.9.1
+platformdirs==3.10.0
 proto-plus==1.22.3
-protobuf==4.24.3
+protobuf==3.20.3
 psutil==5.9.5
-pyaes==1.6.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PyAutoGUI==0.9.54
+pycaw==20230407
+pycparser==2.21
 pycryptodomex==3.19.0
 pydantic==2.3.0
 pydantic_core==2.6.3
 pydub==0.25.1
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
+pyparsing==3.1.1
 pyperclip==1.8.2
 PyRect==0.2.0
 pyscreenshot==3.1
 PyScreeze==0.1.29
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-Python-IO==0.3
 pytweening==1.0.7
 requests==2.31.0
-rfc3986==1.5.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
+sounddevice==0.4.6
 soupsieve==2.5
 SpeechRecognition==3.10.0
-Telethon==1.30.3
-tqdm==4.66.1
 typing_extensions==4.7.1
-urllib3==2.0.5
+urllib3==2.0.6
+virtualenv==20.24.4
 yarl==1.9.2
