--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,15 @@ async-timeout==4.0.3
 attrs==23.1.0
 bardapi==0.1.38
 beautifulsoup4==4.12.2
+blinker==1.6.3
 browser-cookie3==0.19.1
+bs4==0.0.1
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
+cloudscraper==1.2.71
 colorama==0.4.6
 comtypes==1.2.0
 contourpy==1.1.1
@@ -25,6 +28,7 @@ EasyProcess==1.1
 entrypoint2==1.1
 ffmpeg==1.4
 filelock==3.12.3
+Flask==3.0.0
 flatbuffers==23.5.26
 fonttools==4.43.1
 frozenlist==1.4.0
@@ -43,12 +47,18 @@ httpcore==0.18.0
 httpx==0.25.0
 hyperframe==6.0.1
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
 keyboard==0.13.5
 kiwisolver==1.4.5
 langdetect==1.0.9
+lxml==4.9.3
 lz4==4.3.2
 magic-filter==1.0.11
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
 matplotlib==3.8.0
+mdurl==0.1.2
 mediapipe==0.10.5
 MouseInfo==0.1.3
 mss==1.0.2
@@ -57,6 +67,7 @@ numpy==1.26.0
 opencv-contrib-python==4.8.1.78
 opencv-python==4.8.1.78
 packaging==23.2
+pandas==2.1.1
 Pillow==10.0.1
 pipenv==2023.9.1
 platformdirs==3.10.0
@@ -73,23 +84,34 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 pydub==0.25.1
 PyGetWindow==0.0.9
+Pygments==2.16.1
 PyMsgBox==1.0.9
 pyparsing==3.1.1
 pyperclip==1.8.2
+pypiwin32==223
 PyRect==0.2.0
 pyscreenshot==3.1
 PyScreeze==0.1.29
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytube==15.0.0
 pytweening==1.0.7
+pytz==2023.3.post1
+pywin32==306
 requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.6.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 sounddevice==0.4.6
 soupsieve==2.5
 SpeechRecognition==3.10.0
+tqdm==4.66.1
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==2.0.6
+validate-email==1.3
 virtualenv==20.24.4
+Werkzeug==3.0.0
 yarl==1.9.2
